:iphone: Fix covered content of modal on mobile

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -256,6 +256,10 @@
 		top: 0;
 	}
 
+	.tingle-modal-box .info {
+		padding-top: 90px;
+	}
+
 	.tingle-modal--overflow {
 		padding: 0;
 	}
